master * Setup some less behavior + strat dynamizing the content

--- a/style/less/conf.less
+++ b/style/less/conf.less
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400);
+
 // ######## SCREEN SIZES ######## //
 
 @desktop:     ~"only screen and (min-width: 1181px)";
@@ -5,3 +7,7 @@
 @mobile:      ~"only screen and (max-width: 640px)";
 
 
+body, html {
+	.size();
+	font-family:'Lato', sans-serif;
+}
