--- a/style/less/partials/athlete.less
+++ b/style/less/partials/athlete.less
@@ -1,4 +1,48 @@
 .athlete {
 	&.details {}
-	&.list-item {}
+	&.list-item {
+        .size(20%,100%);
+    	> .pict-wrapper {
+    		.size(100%,40%);
+    		position:relative;
+    		padding:0 10%;
+    		box-sizing:border-box;
+            .transition(all 500ms ease-out);
+            > figure {
+                .transition(all 500ms ease-out);
+                top:60%;
+                position:relative;
+                width:100%;
+                height:0;
+                padding-bottom:100%;
+	    		> img {
+	    			.size();
+    				background:@white;
+	    			border-radius:50%;
+	    			box-shadow:0 -1px 1px @black;
+	    		}
+    		}
+    	}
+    	> .details {
+    		.size(100%,20%);
+            .transition(all 500ms ease-out);
+            background:@white;
+                .transition(all 500ms ease-out);
+	    	box-shadow: inset 0 1px 1px @black;
+            > h3 {
+                text-transform:capitalize;
+            }
+    	}
+        &.active {
+            > .pict-wrapper {
+                .size(100%,30%);
+                > figure {
+                    top:40%;
+                }
+            }
+            > .details {
+                .size(100%,50%);
+            }
+        }
+	}
 }
