--- a/style/less/partials/athlete.less
+++ b/style/less/partials/athlete.less
@@ -1,21 +1,22 @@
 .athlete {
-	&.details {}
 	&.list-item {
         .size(20%,100%);
     	> .pict-wrapper {
     		.size(100%,40%);
     		position:relative;
-    		padding:0 10%;
-    		box-sizing:border-box;
             .transition(all 500ms ease-out);
             > figure {
                 .transition(all 500ms ease-out);
-                top:60%;
-                position:relative;
-                width:100%;
-                height:0;
-                padding-bottom:100%;
-	    		> img {
+                z-index:1;
+                position:absolute;
+                max-width:200px;
+                margin:auto;
+                bottom:0;
+                left:0;
+                right:0;
+                margin-bottom:-20%;
+                > img {
+                    max-height:200px;
 	    			.size();
     				background:@white;
 	    			border-radius:50%;
@@ -23,25 +24,56 @@
 	    		}
     		}
     	}
-    	> .details {
+    	> .details-wrapper {
     		.size(100%,20%);
             .transition(all 500ms ease-out);
             background:@white;
-                .transition(all 500ms ease-out);
-	    	box-shadow: inset 0 1px 1px @black;
+            position:relative;
+            box-shadow: inset 0 1px 1px @black;
+            > * {
+                opacity:0;
+                .transition(all 500ms 100ms ease-in);
+            }
             > h3 {
+                .transition(all 400ms ease-in);
+                opacity:1;
                 text-transform:capitalize;
+                text-align: center;
+                position:absolute;
+                top:50%;
+                font-size:25px;
+                .size(100%,auto);
+            }
+            > .details {
+                top:25%;
+                position:absolute;
+                .size();
+                padding:10% 10% 10% 10%;
+                > * {
+                    font-size:18px;
+                    line-height:20px;
+                    padding:10px 0;
+                }
             }
     	}
         &.active {
             > .pict-wrapper {
                 .size(100%,30%);
                 > figure {
-                    top:40%;
+                    // top:50%;
                 }
             }
-            > .details {
+            > .details-wrapper {
                 .size(100%,50%);
+                > h3 {
+                    top:17%;
+                }
+                > * {
+                    opacity:1;
+                }
+                > .details {
+                    top:20%;
+                }
             }
         }
 	}
