--- a/style/less/tablet/athlete.tablet.less
+++ b/style/less/tablet/athlete.tablet.less
@@ -1,10 +1,9 @@
 .athlete {
-	&.details {}
 	&.list-item {
 		.size(100%,11rem);
         background:@white;
 	    box-shadow: inset 0 -1px 1px @black;
-        > .pict-wrapper, > .details {
+        > .pict-wrapper, > .details-wrapper {
             display:inline-block;
             vertical-align:top;
         }
@@ -18,9 +17,21 @@
                 padding:0;
     		}
     	}
-    	> .details {
-    		.size(auto,auto);
+    	> .details-wrapper {
+            .size(auto,auto);
             box-shadow:none;
-    	}
+        }
+        &.active {
+            > .pict-wrapper {
+                .size(11rem,11rem);
+                padding:30px 0 30px 60px;
+                > figure {
+                    top:0;
+                }
+            }
+            > .details-wrapper {
+    		      .size(auto,auto);
+            }
+        }
 	}
 }
