--- a/style/less/partials/athlete.less
+++ b/style/less/partials/athlete.less
@@ -30,13 +30,9 @@
             background:@white;
             position:relative;
             box-shadow: inset 0 1px 1px @black;
-            > * {
-                opacity:0;
-                .transition(all 500ms 100ms ease-in);
-            }
+            overflow:hidden;
             > h3 {
                 .transition(all 400ms ease-in);
-                opacity:1;
                 text-transform:capitalize;
                 text-align: center;
                 position:absolute;
@@ -45,7 +41,9 @@
                 .size(100%,auto);
             }
             > .details {
-                top:25%;
+                opacity:0;
+                .transition(all 800ms 100ms ease-out);
+                top:100%;
                 position:absolute;
                 .size();
                 padding:10% 10% 10% 10%;
