master * Fix minor CSS defects

--- a/style/less/partials/edit.less
+++ b/style/less/partials/edit.less
@@ -1,6 +1,5 @@
 .ui-edit {
 	position:relative;
-	// display:inline-block;
 	.size(100%,auto);
 	> input, > textarea, > span {
 		.size(100%,25px);
@@ -22,8 +21,8 @@
 			.size(15px,15px);
 			position:absolute;
 			display:none;
-			top:0;
-			right:0;
+			top:3px;
+			right:3px;
 			background:url('../res/icon-edit-32x32.png') center center no-repeat;
 			background-size:cover;
 		}
