--- a/style/less/tablet/athlete.tablet.less
+++ b/style/less/tablet/athlete.tablet.less
@@ -1,36 +1,85 @@
 .athlete {
 	&.list-item {
-		.size(100%,11rem);
+        .transition(all 500ms 800ms ease-in-out);
+        // overflow:hidden;
+        position:relative;
+        .size(100%,120px);
         background:@white;
-	    box-shadow: inset 0 -1px 1px @black;
+        box-shadow:none;
+        border-bottom:solid 1px @black;
         > .pict-wrapper, > .details-wrapper {
             display:inline-block;
             vertical-align:top;
         }
         > .pict-wrapper {
-            .size(11rem,11rem);
-            padding:30px;
+            .size(20%,100%);
             background:transparent;
+            position:relative;
             > figure {
-                top:0;
-                .size();
+                .transition(all 500ms 800ms ease-in-out);
+                position:absolute;
+                max-width:90px;
+                max-height:90px;
                 padding:0;
-    		}
-    	}
-    	> .details-wrapper {
-            .size(auto,auto);
+                .size();
+                bottom:0;
+                margin:auto;
+                top:0;
+            }
+        }
+        > .details-wrapper {
+            .size(80%,100%);
             box-shadow:none;
+            background:transparent;
+            position:absolute;
+            right:0;
+            top:0;
+            > h3 {
+                line-height:120px;
+                top:0;
+                z-index:1;
+            }
+            > .details {
+                .size();
+                left:100%;
+                position: absolute;
+                background:@white;
+                padding:0 50px;
+                top:0;
+                &:before {
+                    content: '';
+                    position:absolute;
+                    .size(20%,100%);
+                    .gradientToOpacity(255,255,255);
+                    right:100%;
+                }
+                > *:first-child {
+                    margin-top:120px;
+                }
+            }
         }
         &.active {
+            .size(100%,360px);
             > .pict-wrapper {
-                .size(11rem,11rem);
-                padding:30px 0 30px 60px;
+                .size(15%,100%);
+                margin-left:4rem;
                 > figure {
-                    top:0;
+                    max-width:150px;
+                    max-height:150px;
                 }
             }
             > .details-wrapper {
-    		      .size(auto,auto);
+                .size(80%,100%);
+                left:20%;
+                > h3 {
+                    top:0;
+                }
+                > .details {
+                    width:80%;
+                    top:0;
+                    left:20%;
+                    opacity:1;
+                }
             }
         }
 	}
