master * Update transition -> finition

--- a/style/less/tablet/athlete.tablet.less
+++ b/style/less/tablet/athlete.tablet.less
@@ -35,8 +35,10 @@
             right:0;
             top:0;
             > h3 {
+                .transition(all 500ms ease-out);
                 line-height:120px;
                 top:0;
+                left:0;
                 z-index:1;
             }
             > .details {
@@ -73,6 +75,7 @@
                 left:20%;
                 > h3 {
                     top:0;
+                    left:7%;
                 }
                 > .details {
                     width:80%;
