--- a/style/main.css
+++ b/style/main.css
@@ -706,8 +706,13 @@ main > #athlete-list > * {
     top: 0;
   }
   .athlete.list-item > .details-wrapper > h3 {
+    -webkit-transition: all 500ms ease-out;
+    -moz-transition: all 500ms ease-out;
+    -o-transition: all 500ms ease-out;
+    transition: all 500ms ease-out;
     line-height: 120px;
     top: 0;
+    left: 0;
     z-index: 1;
   }
   .athlete.list-item > .details-wrapper > .details {
@@ -754,6 +759,7 @@ main > #athlete-list > * {
   }
   .athlete.list-item.active > .details-wrapper > h3 {
     top: 0;
+    left: 7%;
   }
   .athlete.list-item.active > .details-wrapper > .details {
     width: 80%;
