master * Make the page responsive to mobile

--- a/style/less/main.less
+++ b/style/less/main.less
@@ -23,4 +23,6 @@
 @media @tablet {
 	@import "tablet/athlete.tablet.less";
 }
-@media @mobile {}
+@media @mobile {
+	@import "mobile/athlete.mobile.less";
+}
