--- a/style/main.css
+++ b/style/main.css
@@ -581,6 +581,9 @@ contributors :
   border-radius: 50%;
   box-shadow: 0 -1px 1px #000000;
 }
+.athlete.list-item > .pict-wrapper > figure > img:hover {
+  cursor: pointer;
+}
 .athlete.list-item > .details-wrapper {
   width: 100%;
   height: 20%;
@@ -744,7 +747,7 @@ main > #athlete-list > * {
     height: 360px;
   }
   .athlete.list-item.active > .pict-wrapper {
-    width: 15%;
+    width: 25%;
     height: 100%;
     margin-left: 4rem;
   }
@@ -765,6 +768,113 @@ main > #athlete-list > * {
     width: 80%;
     top: 0;
     left: 20%;
+    opacity: 1;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .athlete.list-item {
+    -webkit-transition: all 500ms 800ms ease-in-out;
+    -moz-transition: all 500ms 800ms ease-in-out;
+    -o-transition: all 500ms 800ms ease-in-out;
+    transition: all 500ms 800ms ease-in-out;
+    position: relative;
+    width: 100%;
+    height: 120px;
+    background: #ffffff;
+    box-shadow: none;
+    border-bottom: solid 1px #000000;
+  }
+  .athlete.list-item > .pict-wrapper,
+  .athlete.list-item > .details-wrapper {
+    display: inline-block;
+    vertical-align: top;
+  }
+  .athlete.list-item > .pict-wrapper {
+    width: 30%;
+    height: 100%;
+    background: transparent;
+    position: relative;
+  }
+  .athlete.list-item > .pict-wrapper > figure {
+    -webkit-transition: all 500ms 800ms ease-in-out;
+    -moz-transition: all 500ms 800ms ease-in-out;
+    -o-transition: all 500ms 800ms ease-in-out;
+    transition: all 500ms 800ms ease-in-out;
+    position: absolute;
+    max-width: 90px;
+    max-height: 90px;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    margin: auto;
+    top: 0;
+  }
+  .athlete.list-item > .details-wrapper {
+    width: 100%;
+    height: 100%;
+    box-shadow: none;
+    background: transparent;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .athlete.list-item > .details-wrapper > h3 {
+    -webkit-transition: all 500ms ease-out;
+    -moz-transition: all 500ms ease-out;
+    -o-transition: all 500ms ease-out;
+    transition: all 500ms ease-out;
+    line-height: 120px;
+    top: 0;
+    left: 0;
+    margin-left: 1rem;
+    z-index: 1;
+  }
+  .athlete.list-item > .details-wrapper > .details {
+    width: 100%;
+    height: 100%;
+    left: 100%;
+    position: absolute;
+    background: #ffffff;
+    padding: 0 50px;
+    top: 0;
+  }
+  .athlete.list-item > .details-wrapper > .details:before {
+    content: '';
+    position: absolute;
+    width: 20%;
+    height: 100%;
+    background: -moz-linear-gradient(right, #ffffff 0%, rgba(255, 255, 255, 0) 90%);
+    background: -webkit-linear-gradient(right, #ffffff 0%, rgba(255, 255, 255, 0) 90%);
+    background: -o-linear-gradient(right, #ffffff 0%, rgba(255, 255, 255, 0) 90%);
+    background: -ms-linear-gradient(right, #ffffff 0%, rgba(255, 255, 255, 0) 90%);
+    background: linear-gradient(to left, #ffffff 0%, rgba(255, 255, 255, 0) 90%);
+    right: 100%;
+  }
+  .athlete.list-item > .details-wrapper > .details > *:first-child {
+    margin-top: 120px;
+  }
+  .athlete.list-item.active {
+    width: 100%;
+    height: 360px;
+  }
+  .athlete.list-item.active > .pict-wrapper {
+    width: 120px;
+    height: 120px;
+  }
+  .athlete.list-item.active > .details-wrapper {
+    width: 100%;
+    height: 100%;
+    left: 0;
+  }
+  .athlete.list-item.active > .details-wrapper > h3 {
+    top: 0;
+    left: 7%;
+  }
+  .athlete.list-item.active > .details-wrapper > .details {
+    width: 100%;
+    top: 0;
+    left: 0;
     opacity: 1;
   }
 }
