--- a/style/less/partials/athlete.less
+++ b/style/less/partials/athlete.less
@@ -21,6 +21,9 @@
     				background:@white;
 	    			border-radius:50%;
 	    			box-shadow:0 -1px 1px @black;
+                    &:hover {
+                        cursor:pointer;
+                    }
 	    		}
     		}
     	}
