master * Fixing minor css defects

--- a/style/less/elements/home.less
+++ b/style/less/elements/home.less
@@ -5,10 +5,11 @@ body {
 main {
 	.size();
 	background-size:cover;
+	background:rgba(255, 255, 255, .5);
+	text-align:center;
 	> #athlete-list {
 		.size();
 		> * {
-			background:rgba(255, 255, 255, .5);
 			display:inline-block;
 			vertical-align:top;
 		}
