--- a/style/less/partials/athlete.less
+++ b/style/less/partials/athlete.less
@@ -1,6 +1,8 @@
 .athlete {
 	&.list-item {
+        text-align:left;
         .size(20%,100%);
+        max-width:310px;
     	> .pict-wrapper {
     		.size(100%,40%);
     		position:relative;
@@ -51,6 +53,7 @@
                 .size();
                 padding:10% 10% 10% 10%;
                 > * {
+                    text-align:left;
                     font-size:18px;
                     line-height:20px;
                     padding:10px 0;
