--- a/style/less/tablet/athlete.tablet.less
+++ b/style/less/tablet/athlete.tablet.less
@@ -1,10 +1,9 @@
 .athlete {
 	&.list-item {
+        max-width:none;
         .transition(all 500ms 800ms ease-in-out);
-        // overflow:hidden;
         position:relative;
         .size(100%,120px);
-        background:@white;
         box-shadow:none;
         border-bottom:solid 1px @black;
         > .pict-wrapper, > .details-wrapper {
