--- a/style/main.css
+++ b/style/main.css
@@ -547,8 +547,10 @@ contributors :
   display: inline-block;
 }
 .athlete.list-item {
+  text-align: left;
   width: 20%;
   height: 100%;
+  max-width: 310px;
 }
 .athlete.list-item > .pict-wrapper {
   width: 100%;
@@ -622,6 +624,7 @@ contributors :
   padding: 10% 10% 10% 10%;
 }
 .athlete.list-item > .details-wrapper > .details > * {
+  text-align: left;
   font-size: 18px;
   line-height: 20px;
   padding: 10px 0;
@@ -650,18 +653,20 @@ main {
   width: 100%;
   height: 100%;
   background-size: cover;
+  background: rgba(255, 255, 255, 0.5);
+  text-align: center;
 }
 main > #athlete-list {
   width: 100%;
   height: 100%;
 }
 main > #athlete-list > * {
-  background: rgba(255, 255, 255, 0.5);
   display: inline-block;
   vertical-align: top;
 }
 @media only screen and (min-width: 641px) and (max-width: 1180px) {
   .athlete.list-item {
+    max-width: none;
     -webkit-transition: all 500ms 800ms ease-in-out;
     -moz-transition: all 500ms 800ms ease-in-out;
     -o-transition: all 500ms 800ms ease-in-out;
@@ -669,7 +674,6 @@ main > #athlete-list > * {
     position: relative;
     width: 100%;
     height: 120px;
-    background: #ffffff;
     box-shadow: none;
     border-bottom: solid 1px #000000;
   }
@@ -777,10 +781,10 @@ main > #athlete-list > * {
     -moz-transition: all 500ms 800ms ease-in-out;
     -o-transition: all 500ms 800ms ease-in-out;
     transition: all 500ms 800ms ease-in-out;
+    max-width: none;
     position: relative;
     width: 100%;
     height: 120px;
-    background: #ffffff;
     box-shadow: none;
     border-bottom: solid 1px #000000;
   }
