master * Add github informations

--- a/style/less/elements/home.less
+++ b/style/less/elements/home.less
@@ -16,3 +16,15 @@ main {
 	}
 }
 
+#github {
+	position:fixed;
+	.size(150px,150px);
+	top:0;
+	right:0;
+	background:url('../res/github.png') no-repeat top right;
+	> a {
+		.size(150px,150px);
+		display:block;
+	}
+}
+
